--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Colour picker tool",
   "main": "index.js",
+  "engines": {
+    "node": "4.1.1"
+  },
   "scripts": {
 		"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
