--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Colour picker tool",
   "main": "index.js",
   "engines": {
-    "node": "4.1.1"
+    "node": "7.x"
   },
   "scripts": {
 		"start": "node index.js",
